--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     ports:
       - "8001:8001"
     environment:
+      PYTHONPATH: /app
       POSTGRES_HOST: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -57,6 +58,25 @@ services:
         condition: service_healthy
     volumes:
       - ./src:/app/src
+
+  tests:
+    build: .
+    command: pytest -v
+    environment:
+      PYTHONPATH: /app
+      POSTGRES_HOST: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: taskdb
+      POSTGRES_PORT: 5432
+      RABBITMQ_HOST: rabbitmq
+    volumes:
+      - ./src:/app/src
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
 
   worker:
     build: .
