--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic-settings>=2.12.0",
     "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "sqlalchemy>=2.0.46",
     "uvicorn>=0.40.0",
 ]
+[tool.pytest.ini_options]
+asyncio_mode = "strict"
